tests/baselines/reference/computedPropertyNames44_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames44_ES5.ts(6,5): error TS2411: Property '["get1"]' of type 'Foo' is not assignable to string index type 'Foo2'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames44_ES5.ts(6,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames44_ES5.ts(10,5): error TS2411: Property '["set1"]' of type 'Foo' is not assignable to string index type 'Foo2'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames44_ES5.ts(10,9): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames44_ES5.ts (4 errors) ====
    class Foo { x }
    class Foo2 { x; y }
    
    class C {
        [s: string]: Foo2;
        get ["get1"]() { return new Foo }
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2411: Property '["get1"]' of type 'Foo' is not assignable to string index type 'Foo2'.
            ~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
    }
    
    class D extends C {
        set ["set1"](p: Foo) { }
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2411: Property '["set1"]' of type 'Foo' is not assignable to string index type 'Foo2'.
            ~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
    }